--- a/package.json
+++ b/package.json
@@ -38,6 +38,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ],
-    "homepage": "http://enard090.github.io/portfolio"
+    "homepage": "http://enard090.github.io"
   }
 }
